# TaskManager

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  TRADEMARK.md  deploy.sh  dev.ps1  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  db.py  main.py  mcp_http.py  mcp_tools.py  ratelimit.py  schemas.py
app/routers/: auth.py  exams.py  files.py  internal.py  oauth.py  settings.py  simulation.py
app/services/: courses.py  dashboard.py  deliverables.py  events.py  exams.py  file_index.py  google_calendar.py  lectures.py  oauth.py  settings.py  simulation.py  slots.py  storage.py  study_topics.py  tasks.py
app/tools/: hashpw.py
docs/: claude-design-prompt.md
docs/brand/: README.md
docs/examples/: study-dashboard-v2.html  study-dashboard-v3.html  study-dashboard-v4.html  study-dashboard-v6.html
migrations/: 00000000000000_baseline.sql  20260429000001_drop_rls_auto_enable.sql  20260510204600_google_integration.sql
migrations/_archive/: 20260101000001_init.sql  20260115000001_lectures.sql  20260201000001_oauth.sql  20260301000001_app_settings.sql  20260420000001_english_canonical_kinds.sql  20260421000001_theme.sql  20260425130000_file_index.sql  20260425170000_totp.sql  20260426000001_lectures_kind_in_unique.sql
scripts/: build-seo.mjs  index_files.py  run_migrations.py
tests/: conftest.py  test_integration_full_flow.py  test_simulation.py
web/: .dockerignore  Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+75 files in other folders)
